--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ netmiko==1.4.1
 paramiko==2.1.6
 pyasn1==0.2.3
 pycparser==2.17
-PyYAML==3.12
+PyYAML==4.2b1
 scp==0.10.2
 six==1.10.0
 SQLAlchemy==1.1.10
